--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="./jemdoc.css" type="text/css" />
 <script src="jquery.min.js"></script>
 <link rel="shortcut icon" href="./Files/DMU_64.ico">
-<title>Baiang Li</title>
+<title>Junyao Gao</title>
 </head>
 
 
@@ -53,8 +53,8 @@
 
 <A NAME="Bio"><h2>Bio</h2></A>
 
-I am an phd student at Tongji University. At present, I am doing research intern in <a href="https://openmmlab.com" target="_blank"> OpenMMLab</a>.
-I am interested in <b>image generation, privacy & security and person Re-ID</b>.
+I am an phd student at Tongji University. At present, I am doing research intern in <a href="https://openmmlab.com" target="_blank"> OpenMMLab</a> at Shanghai Artificial Intelligence Laboratory.
+I am interested in <b>image/video generation, privacy & security and person Re-ID</b>.
 
 
 <A NAME="Publications"><h2>Publications</h2></A>
