--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <table class="imgtable">
     <tr>
         <td>
-            <a href="./"><img src="./Junyao Gao.jpg" alt="" height="210px" /></a>&nbsp;
+            <a href="./"><img src="./20240313-211747.jpg" alt="" height="210px" /></a>&nbsp;
         </td>
         <td align="left">
             <p><a href="./"><font size="4">Junyao Gao </font>&nbsp<font size="4"; font style="font-family:Microsoft YaHei">高俊尧</font><font size="4"></font></a><br />
