--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <font size="3"> 
 <p style="text-indent: 0rem;margin-left: 0rem;"><sup>†Equal Contribution, * Corresponding Author(s)</sup></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
-        [1] <b>Baiang Li</b>, Huan Zheng, Zhao Zhang*, Yang Zhao, Zhongqiu Zhao and Haijun Zhang, 
-<!--         <a href="https://arxiv.org/abs/2211.00859" target="_blank"> -->
-           "Dynamic Grouped Interaction Network for Low-Light Stereo Image Enhancement", 
+        [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
+<!--         <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank"> -->
+           "Similarity Distribution Based Membership Inference Attack on Person Re-identification", 
 <!--         </a> -->
-        <i><b>ACM International Conference on Multimedia (ACM MM)</b></i> 2023.
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023.
 <!--         &nbsp<a href="https://github.com/Ian0926/DCI-Net" target="_blank">code</a> -->
     </span></p>
 <!-- <ul>
