--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <p style="text-indent: 0rem;margin-left: 0rem;"><sup>†Equal Contribution, * Corresponding Author(s)</sup></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
-<!--         <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank"> -->
+	    <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank">
            "Similarity Distribution Based Membership Inference Attack on Person Re-identification", 
 <!--         </a> -->
         <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023.
