--- a/index.html
+++ b/index.html
@@ -64,74 +64,30 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
         [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
 	    <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank">
            "Similarity Distribution Based Membership Inference Attack on Person Re-identification", 
-<!--         </a> -->
-        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023.
-<!--         &nbsp<a href="https://github.com/Ian0926/DCI-Net" target="_blank">code</a> -->
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023, oral.
     </span></p>
-<!-- <ul>
-    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [6] Zhicheng Ji<sup>†</sup>, <b>Huan Zheng</b><sup>†</sup>, Zhao Zhang*, Qiaolin Ye, Yang Zhao and Mingliang Xu, 
-        <a href="https://ian0926.github.io/" target="_blank">
-            Multi-Scale Interaction Network for Low-Light Stereo Image Enhancement, 
-        </a>
-        <i>IEEE Transactions on Consumer Electronics (<b>IEEE TCE</b>)</i> 2023.
-        &nbsp<a href="https://ian0926.github.io/" target="_blank">code</a>
+<p style="text-indent: 0rem;margin-left: 0rem;"><sup>†Equal Contribution, * Corresponding Author(s)</sup></p>
+    <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
+        [1] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
+	    <a href="https://arxiv.org/abs/2309.08912" target="_blank">
+           "Delving into Multimodal Prompting for Fine-grained Visual Classification", 
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2024.
     </span></p>
-
-</ul> -->
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
 <ul>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [1] <b>Baiang Li</b>, Zhao Zhang*, Huan Zheng, Xiaogang Xu*, Yanyan Wei, Jicong Fan, Zhongqiu Zhao and Richang Hong, 
-<!--         <a href="https://arxiv.org/abs/2211.00859" target="_blank"> -->
-            "Regformer: Region-aware Transformer for Single Image Deraining", 
-<!--         </a> -->
-        <i><b>arxiv</b></i> April 2023.
-<!--         &nbsp<a href="https://github.com/Ian0926/DCI-Net" target="_blank">code</a> -->
-    </span></p>
-    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [2] Jingyi Shi, <b>Baiang Li</b>, Huan Zheng, Liuwei An and Xiao Sun*, 
-            "Global Multiple Extraction Network for Low-Resolution Facial Expression Recognition",
-            <i><b>arxiv</b></i> May 2023.
-    </span></p>
-    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [3] Zhixiang Wang, <b>Baiang Li</b>, Jian Wang, Yu-Lun Liu, Jinwei Gu, Yung-Yu Chuang, Shin'ichi Satoh, 
-            "Matting by Generation",
-            <i><b>arxiv</b></i> Nov. 2023.
-    </span></p>
-    
-</ul> 
-
-<A NAME="Challenge Reports"><h2>Challenge Reports</h2></A>
-<font size="3"> 
-<ul>
-
-    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [1] <a href="https://openaccess.thecvf.com/content/CVPR2023W/NTIRE/papers/Zhang_NTIRE_2023_Challenge_on_Image_Super-Resolution_x4_Methods_and_Results_CVPRW_2023_paper.pdf" target="_blank">
-            NTIRE 2023 challenge on image super-resolution (x4): Methods and results, 
-        </a>
-        <b>CVPR NTIRE</b> 2023.
-    </span></p>
-    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [2] <a href="https://openaccess.thecvf.com/content/CVPR2023W/NTIRE/papers/Li_NTIRE_2023_Challenge_on_Efficient_Super-Resolution_Methods_and_Results_CVPRW_2023_paper.pdf" target="_blank">
-            NTIRE 2023 challenge on efficient super-resolution: Methods and results, 
-        </a>
-        <b>CVPR NTIRE</b> 2023.
+        [1] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao, 
+	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
+            "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification", 
+        <i><b>arxiv</b></i> Dec. 2023.
     </span></p>
 </ul> 
+
 
 <A NAME="Services"><h2>Services</h2></A>
 <font size="3">
-<p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
-<ul>
-    <li>Multimedia Tools and Applications (<b>MTAP</b>)</li>
-
-</ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Conference Reviewer</b></p>
-<ul>
-    <li>The IEEE/CVF Conference on Computer Vision and Pattern Recognition  (<b>CVPR</b>) (2024)</li>
-</ul>
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023)</li>
 </ul>
@@ -140,18 +96,10 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <font size="3"> 
 <ul>
 	<li>
-		<div style="float:left; text-align:left"><a href="https://en.zhejianglab.com">Zhejiang Lab</a>, Hangzhou, China</div><div style="float:right; text-align:right">July 2023 – Sep. 2023</div><br>
-		Research Intern<br>
-		Advisor: <a href="https://xiaogang00.github.io">Xiaogang Xu</a> and <a href="https://yulunzhang.com">Yulun Zhang</a><br>
-		Topic: low-light image/video enhancement and image/video restoration<br>
-	</li>
-</ul>
-<ul>
-	<li>
 		<div style="float:left; text-align:left"><a href="https://openmmlab.com">OpenMMLab</a>, Shanghai, China</div><div style="float:right; text-align:right">Nov. 2023 – Current</div><br>
 		Research Intern<br>
-<!-- 		Advisor: <a href="https://zengyh1900.github.io">Yanhong Zeng</a>
-		Topic: Image/video restoration and generation<br>
+ 		Advisor: Yanan Sun
+		Topic: Image/video generation<br>
 	</li>
 </ul>
 <A NAME="Connections"><h2>Connections</h2></A>
@@ -168,7 +116,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <div>
     <center>
 <!-- 	    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5bdhyqmizxk&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script> -->
-    <br />© Baiang Li
+    <br />© Junyao Gao
     </center>        
 </div>
     
