--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
 	    <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank">
-           "Similarity Distribution Based Membership Inference Attack on Person Re-identification", 
+           "Similarity Distribution Based Membership Inference Attack on Person Re-identification"</a>, 
         <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023, oral.
     </span></p>
 <p style="text-indent: 0rem;margin-left: 0rem;"><sup>†Equal Contribution, * Corresponding Author(s)</sup></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [1] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
 	    <a href="https://arxiv.org/abs/2309.08912" target="_blank">
-           "Delving into Multimodal Prompting for Fine-grained Visual Classification", 
+           "Delving into Multimodal Prompting for Fine-grained Visual Classification"</a>, 
         <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2024.
     </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
@@ -79,7 +79,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
         [1] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
-            "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification", 
+            "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
         <i><b>arxiv</b></i> Dec. 2023.
     </span></p>
 </ul> 
