--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     </span></p>
 <p style="text-indent: 0rem;margin-left: 0rem;"><sup>†Equal Contribution, * Corresponding Author(s)</sup></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
-        [1] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
+        [2] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
 	    <a href="https://arxiv.org/abs/2309.08912" target="_blank">
            "Delving into Multimodal Prompting for Fine-grained Visual Classification"</a>, 
         <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2024.
@@ -77,7 +77,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <font size="3"> 
 <ul>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [1] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao, 
+        [3] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
         <i><b>arxiv</b></i> Dec. 2023.
@@ -98,19 +98,18 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 	<li>
 		<div style="float:left; text-align:left"><a href="https://openmmlab.com">OpenMMLab</a>, Shanghai, China</div><div style="float:right; text-align:right">Nov. 2023 – Current</div><br>
 		Research Intern<br>
- 		Advisor: Yanan Sun
-		Topic: Image/video generation<br>
+ 		<b>Advisor</b>: Yanan Sun
+		<b>Topic</b>: Image/video generation<br>
 	</li>
 </ul>
 <A NAME="Connections"><h2>Connections</h2></A>
 <font size="3">
-<!-- <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p> -->
 <ul>
-    <a href="https://ian0926.github.io/" target="_blank">Huan Zheng</a>
+    <a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>
 </ul>
-<!-- <ul>
-    <a href="https://xiaogang00.github.io/" target="_blank">Xiaogang Xu</a>
-</ul> -->
+<ul>
+    <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>
+</ul>
 </A>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
 <div>
