--- a/index.html
+++ b/index.html
@@ -103,12 +103,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 </ul>
 <A NAME="Connections"><h2>Connections</h2></A>
 <font size="3">
-<ul>
-    <a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>
-</ul>
-<ul>
-    <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>
-</ul>
+<a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>, <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>, <a href="https://thomaswangy.github.io/" target="_blank">Yubin Wang</a>
 </A>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
 <div>
