--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
            "Delving into Multimodal Prompting for Fine-grained Visual Classification"</a>, 
         <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2024.
     </span></p>
+    <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
+        [3] <b>Junyao Gao</b>, Xinyang Jiang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cairong Zhao*, 
+           "Re-ID-leak: Membership Inference Attacks Against Person Re-Identification"</a>, 
+        <i><b>International Journal of Computer Vision (IJCV)</b></i> 2024.
+    </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
 <ul>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [3] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao, 
+        [4] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
-        <i><b>arxiv</b></i> Dec. 2023.
+        <i><b>arxiv</b></i> Mar. 2024.
     </span></p>
 </ul> 
 
@@ -88,7 +93,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <font size="3">
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Conference Reviewer</b></p>
 <ul>
-    <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023)</li>
+    <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
 </ul>
     
 <A NAME="Intern Experiences"><h2>Intern Experiences</h2></A>
