--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
         [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
 	    <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank">
            "Similarity Distribution Based Membership Inference Attack on Person Re-identification"</a>, 
-        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2023, oral.
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> ,2023, <b>oral</b>.
     </span></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [2] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
@@ -75,7 +75,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [3] <b>Junyao Gao</b>, Xinyang Jiang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cairong Zhao*, 
            "Re-ID-leak: Membership Inference Attacks Against Person Re-Identification"</a>, 
-        <i><b>International Journal of Computer Vision (IJCV)</b></i> decision to accept 2024.
+        <i><b>International Journal of Computer Vision (IJCV)</b></i> decision to accept, 2024.
     </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
@@ -84,7 +84,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
         [4] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
-        <i><b>arxiv</b></i> 2024.
+        <i><b>arxiv</b></i>, 2024.
     </span></p>
 </ul> 
 
