--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
         [1] <b>Junyao Gao</b>, Xinyang Jiang, Huishuai Zhang, Yifan Yang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cheng Deng, Cairong Zhao*, 
 	    <a href="https://ojs.aaai.org/index.php/AAAI/article/download/26731/26503" target="_blank">
            "Similarity Distribution Based Membership Inference Attack on Person Re-identification"</a>, 
-        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> ,2023, <b>oral</b>.
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i>, 2023, <b>oral</b>.
     </span></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [2] Xin Jiang, Hao Tang, <b>Junyao Gao</b>, Xiaoyu Du, Shengfeng He, Zechao Li*, 
 	    <a href="https://arxiv.org/abs/2309.08912" target="_blank">
            "Delving into Multimodal Prompting for Fine-grained Visual Classification"</a>, 
-        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i> 2024.
+        <i><b>AAAI Conference on Artificial Intelligence (AAAI)</b></i>, 2024.
     </span></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [3] <b>Junyao Gao</b>, Xinyang Jiang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cairong Zhao*, 
