--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
 </ul>
+<p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
+<ul>
+    <li>International Journal of Computer Vision (<b>IJCV</b>)</li>
+</ul>
     
 <A NAME="Intern Experiences"><h2>Intern Experiences</h2></A>
 <font size="3"> 
