--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Conference Reviewer</b></p>
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
+    <li>Neural Information Processing Systems (<b>NIPS</b>) (2024)</li>
 </ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
 <ul>
