--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
         [3] <b>Junyao Gao</b>, Xinyang Jiang, Shuguang Dou, Dongsheng Li, Duoqian Miao, Cairong Zhao*, 
 	    <a href="https://link.springer.com/article/10.1007/s11263-024-02115-6?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=nonoa_20240522&utm_content=10.1007/s11263-024-02115-6" target="_blank">
            "Re-ID-leak: Membership Inference Attacks Against Person Re-Identification"</a>, 
-        <i><b>International Journal of Computer Vision (IJCV)</b></i>, 2024.
+        <i><b>International Journal of Computer Vision (IJCV)</b></i>, <a href="https://rdcu.be/dIKda" target="_blank">read only pdf</a>, 2024.
     </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
