--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
         <i><b>arxiv</b></i>, 2024.
     </span></p>
+    <p style="text-indent: -2rem;margin-left: 0rem;"><span>
+        [5] <b>Junyao Gao</b>, Yanchen Liu, Yanan Sun, Yinhao Tang, Yanhong Zeng, Kai Chen, Cairong Zhao*, 
+	    <a href="https://arxiv.org/abs/2407.01414" target="_blank">
+            "StyleShot: A Snapshot on Any Style"</a>, 
+        <i><b>arxiv</b></i>, 2024.
+    </span></p>
 </ul> 
 
 
