--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
     <li>Neural Information Processing Systems (<b>NIPS</b>) (2024)</li>
+    <li> International Conference on Learning Representations (<b>ICLR</b>) (2025)</li>
 </ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
 <ul>
