--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
     <li>Neural Information Processing Systems (<b>NIPS</b>) (2024)</li>
-    <li> International Conference on Learning Representations (<b>ICLR</b>) (2025)</li>
+    <li>International Conference on Learning Representations (<b>ICLR</b>) (2025)</li>
+    <li>Artificial Intelligence and Statistics Conference (<b>AISTATS</b>) (2025)</li>
 </ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
 <ul>
@@ -121,7 +122,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 </ul>
 <A NAME="Connections"><h2>Connections</h2></A>
 <font size="3">
-<a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>, <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>, <a href="https://thomaswangy.github.io/" target="_blank">Yubin Wang</a>, <a href="https://Whitejiang.github.io/" target="_blank">Xin Jiang</a>
+<a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>, <a href="https://matcaviar.github.io/" target="_blank">Zifan Song</a>, <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>, <a href="https://thomaswangy.github.io/" target="_blank">Yubin Wang</a>, <a href="https://Whitejiang.github.io/" target="_blank">Xin Jiang</a>
 </A>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
 <div>
