--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     <li>Neural Information Processing Systems (<b>NIPS</b>) (2024)</li>
     <li>International Conference on Learning Representations (<b>ICLR</b>) (2025)</li>
     <li>Artificial Intelligence and Statistics Conference (<b>AISTATS</b>) (2025)</li>
+    <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) (2025)</li>
 </ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
 <ul>
