--- a/index.html
+++ b/index.html
@@ -78,17 +78,23 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
            "Re-ID-leak: Membership Inference Attacks Against Person Re-Identification"</a>, 
         <i><b>International Journal of Computer Vision (IJCV)</b></i>, <a href="https://rdcu.be/dIKda" target="_blank">read only pdf</a>, 2024.
     </span></p>
+    <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
+        [4] Weicai Ye,  Chenhao Ji, Zheng Chen, <b>Junyao Gao</b>, Xiaoshui Huang, Song-Hai Zhang, Wanli Ouyang, Tong He, Cairong Zhao*, Guofeng Zhang*, 
+	    <a href="https://link.springer.com/article/10.1007/s11263-024-02115-6?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=nonoa_20240522&utm_content=10.1007/s11263-024-02115-6" target="_blank">
+           "DiffPano: Scalable and Consistent Text to Panorama Generation with Spherical Epipolar-Aware Diffusion"</a>, 
+        <i><b>Neural Information Processing Systems (NIPS)</b></i>, <a href="https://arxiv.org/pdf/2410.24203?" target="_blank">read only pdf</a>, 2024.
+    </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
 <ul>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [4] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
+        [5] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
         <i><b>arxiv</b></i>, 2024.
     </span></p>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [5] <b>Junyao Gao</b>, Yanchen Liu, Yanan Sun, Yinhao Tang, Yanhong Zeng, Kai Chen, Cairong Zhao*, 
+        [6] <b>Junyao Gao</b>, Yanchen Liu, Yanan Sun, Yinhao Tang, Yanhong Zeng, Kai Chen, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2407.01414" target="_blank">
             "StyleShot: A Snapshot on Any Style"</a>, 
         <i><b>arxiv</b></i>, 2024.
