--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
     </span></p>
     <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
         [4] Weicai Ye,  Chenhao Ji, Zheng Chen, <b>Junyao Gao</b>, Xiaoshui Huang, Song-Hai Zhang, Wanli Ouyang, Tong He, Cairong Zhao*, Guofeng Zhang*, 
-	    <a href="https://link.springer.com/article/10.1007/s11263-024-02115-6?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=nonoa_20240522&utm_content=10.1007/s11263-024-02115-6" target="_blank">
+	    <a href="https://arxiv.org/pdf/2410.24203?" target="_blank">
            "DiffPano: Scalable and Consistent Text to Panorama Generation with Spherical Epipolar-Aware Diffusion"</a>, 
-        <i><b>Neural Information Processing Systems (NIPS)</b></i>, <a href="https://arxiv.org/pdf/2410.24203?" target="_blank">read only pdf</a>, 2024.
+        <i><b>Neural Information Processing Systems (NIPS)</b></i>, 2024.
     </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
