--- a/index.html
+++ b/index.html
@@ -84,17 +84,23 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
            "DiffPano: Scalable and Consistent Text to Panorama Generation with Spherical Epipolar-Aware Diffusion"</a>, 
         <i><b>Neural Information Processing Systems (NIPS)</b></i>, 2024.
     </span></p>
+    <p style="text-indent: +0.5rem;margin-left: 0rem;"><span>
+        [5] <b>Junyao Gao</b>,  Yanan Sun*, Fei Shen, Xin Jiang, Zhening Xing, Kai Chen*, Cairong Zhao*, 
+	    <a href="https://arxiv.org/pdf/2410.24203?" target="_blank">
+           "FaceShot: Bring Any Character into Life"</a>, 
+        <i><b>International Conference on Learning Representations (ICLR)</b></i>, 2025
+    </span></p>
 <A NAME="Preprints"><h2>Preprints</h2></A>
 <font size="3"> 
 <ul>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [5] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
+        [6] Shuguang Dou, Xiangyang Jiang, Yuanpeng Tu, <b>Junyao Gao</b>, Zefan Qu, Qingsong Zhao, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2401.18032" target="_blank">
             "DROP: Decouple Re-Identification and Human Parsing with Task-specific Features for Occluded Person Re-identification"</a>, 
         <i><b>arxiv</b></i>, 2024.
     </span></p>
     <p style="text-indent: -2rem;margin-left: 0rem;"><span>
-        [6] <b>Junyao Gao</b>, Yanchen Liu, Yanan Sun, Yinhao Tang, Yanhong Zeng, Kai Chen, Cairong Zhao*, 
+        [7] <b>Junyao Gao</b>, Yanchen Liu, Yanan Sun, Yinhao Tang, Yanhong Zeng, Kai Chen, Cairong Zhao*, 
 	    <a href="https://arxiv.org/abs/2407.01414" target="_blank">
             "StyleShot: A Snapshot on Any Style"</a>, 
         <i><b>arxiv</b></i>, 2024.
