--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@ I am interested in <b>image/video generation, privacy & security and person Re-I
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Conference Reviewer</b></p>
 <ul>
     <li>ACM International Conference on Multimedia (<b>ACM MM</b>) (2023, 2024)</li>
-    <li>Neural Information Processing Systems (<b>NIPS</b>) (2024)</li>
+    <li>Neural Information Processing Systems (<b>NIPS</b>) (2024, 2025)</li>
     <li>International Conference on Learning Representations (<b>ICLR</b>) (2024)</li>
     <li>Artificial Intelligence and Statistics Conference (<b>AISTATS</b>) (2024)</li>
     <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) (2024)</li>
     <li>International Conference on Machine Learning (<b>ICML</b>) (2024)</li>
+    <li>International Conference on Computer Vision (<b>ICCV</b>) (2025)</li>
 </ul>
 <p style="text-indent: 0rem;margin-left: 0rem;"><b>Journal Reviewer</b></p>
 <ul>
