--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ I am also used to going to the gym in the evening, and running or swimming in th
 
   </body>
 <div class="wrapper">
-  <div id="misc" class="friends">
+  <div id="friends" class="friends">
       <h1 class="md-heading text-left">
         <img src="images/icon/friends.png" alt="My Icon" class="my-icon">
         Friends
