--- a/index.html
+++ b/index.html
@@ -497,9 +497,7 @@ I am also used to going to the gym in the evening, and running or swimming in th
         Friends
       </h1>  
       <p>
-I am willing to try something new, like guitar, photography and writing poem, and always full of novel ideas.
-Enjoy participating in meaningful social activities (connect with the community).
-I am also used to going to the gym in the evening, and running or swimming in the morning.
+<a href="https://shuguang-52.github.io/" target="_blank">Shuguang Dou</a>, <a href="https://matcaviar.github.io/" target="_blank">Zifan Song</a>, <a href="https://yuanpengtu.github.io/" target="_blank">Yuanpeng Tu</a>, <a href="https://thomaswangy.github.io/" target="_blank">Yubin Wang</a>, <a href="https://Whitejiang.github.io/" target="_blank">Xin Jiang</a>
       </p>
       
   </div>
