--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p> 
-      Hello, I am a third-year Computer Science Ph.D. student at <a href="https://en.tongji.edu.cn/p/#/">Tongji University</a>, luckily advised by <a href="https://vill-lab.github.io/">Prof. Cairong Zhao</a>. Prior to this, I obtained my bachelor degree in Intelligence Science and Technology from <a href="https://english.njust.edu.cn/">NJUST</a> in 2022. At present, I am doing research intern in OpenMMLab of Shanghai AI Laboratory, Shanghai, supervised by <a href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=en&oi=ao">Dr. Yanan Sun</a>. I also have a deep academic collaboration with <a href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=en&oi=ao">Dr. Xinyang Jiang</a> from Microsoft Research Asia. My research interests are in  image/video generation, privacy & security and person Re-ID, etc. 
+      Hello, I am a third-year Computer Science Ph.D. student at <a href="https://en.tongji.edu.cn/p/#/">Tongji University</a>, luckily advised by <a href="https://vill-lab.github.io/">Prof. Cairong Zhao</a>. Prior to this, I obtained my bachelor degree in Intelligence Science and Technology from <a href="https://english.njust.edu.cn/">NJUST</a> in 2022. At present, I am doing research intern in OpenMMLab of Shanghai AI Laboratory, Shanghai, supervised by <a href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=en&oi=ao">Dr. Yanan Sun</a>. I also have a deep academic collaboration with <a href="https://scholar.google.com/citations?user=JiTfWVMAAAAJ&hl=zh-CN">Dr. Xinyang Jiang</a> from Microsoft Research Asia. My research interests are in  image/video generation, privacy & security and person Re-ID, etc. 
     </p>
   </div>
 </div>
@@ -295,8 +295,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
-    <li class="indented" data-date="[Mar, 2025]"> We release <a href="https://arxiv.org/abs/2503.19990"><strong>LEGO-Puzzles</strong></a>, a new benchmark with 1,100 LEGO-based VQA tasks that evaluates MLLMs' ability to perform multi-step spatial reasoning.   </li>
-    <li class="indented" data-date="[Feb, 2025]"> One paper (<strong>UniDD</strong>) about dataset distillation accepted to CVPR 2025. </li>
+　　　　<li class="indented" data-date="[May, 2025]"> I will AI Lab at Tencent (IP-Adapter Team) to begin my internship journey. It's great to see you in Shenzhen! </li>
+　　　　<li class="indented" data-date="[May, 2025]"> One paper (<strong>MCDM</strong>) about long-term talkingface generation accepted to ICML 2025.   </li>
+    <li class="indented" data-date="[Mar, 2025]"> We release <a href="https://tangkexian.github.io/LEGO-Puzzles/"><strong>LEGO-Puzzles</strong></a>, a new benchmark with 1,100 LEGO-based VQA tasks that evaluates MLLMs' ability to perform multi-step spatial reasoning.   </li>
+    <li class="indented" data-date="[Feb, 2025]"> One paper (<strong>UniDD</strong>) about dataset distillation accepted to CVPR 2025 as the <strong>oral presentation</strong>. </li>
     <li class="indented" data-date="[Jan, 2025]"> One paper (<strong>FaceShot</strong>) about portrait animation accepted to ICLR 2025. </li>
     <li class="indented" data-date="[Oct, 2024]"> One paper (<strong>DiffPano</strong>) about panorama generation accepted to IJCV. </li>
     <li class="indented" data-date="[Jul, 2024]"> We release <a href="https://github.com/open-mmlab/StyleShot"><strong>StyleShot</strong></a>, a style transfer method capable of generating the high-quality stylized images that match the desired style from any reference image without test-time style-tuning. </li>
@@ -347,7 +349,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <b><span >Preperint, 2025</span></b>
         <div class="tags">
-          [<a class="tag" href="https://arxiv.org/pdf/2503.19990"><strong>paper</strong></a>]
+          [<a class="tag" href="https://arxiv.org/abs/2503.19990"> <strong>paper</strong></a>]
+          [<a class="tag" href="https://github.com/Tangkexian/LEGO-Puzzles"><strong>code</strong></a>]
+          [<a class="tag" href="https://tangkexian.github.io/LEGO-Puzzles/"><strong>project page</strong></a>]
         </div>
 
       </div>
