--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li class="indented" data-date="[Mar, 2025]"> We release <a href="https://tangkexian.github.io/LEGO-Puzzles/"><strong>LEGO-Puzzles</strong></a>, a new benchmark with 1,100 LEGO-based VQA tasks that evaluates MLLMs' ability to perform multi-step spatial reasoning.   </li>
     <li class="indented" data-date="[Feb, 2025]"> One paper (<strong>UniDD</strong>) about dataset distillation accepted to CVPR 2025 as the <strong>oral presentation</strong>. </li>
     <li class="indented" data-date="[Jan, 2025]"> One paper (<strong>FaceShot</strong>) about portrait animation accepted to ICLR 2025. </li>
-    <li class="indented" data-date="[Oct, 2024]"> One paper (<strong>DiffPano</strong>) about panorama generation accepted to IJCV. </li>
+    <li class="indented" data-date="[Oct, 2024]"> One paper (<strong>DiffPano</strong>) about panorama generation accepted to NIPS 2025. </li>
     <li class="indented" data-date="[Jul, 2024]"> We release <a href="https://github.com/open-mmlab/StyleShot"><strong>StyleShot</strong></a>, a style transfer method capable of generating the high-quality stylized images that match the desired style from any reference image without test-time style-tuning. </li>
     <li class="indented" data-date="[May, 2024]"> One paper (<strong>Re-ID leak</strong>) about MIA in Re-ID accepted to IJCV. </li>
     <li class="indented" data-date="[Mar, 2024]"> One paper about fine-grained classification accepted to AAAI 2024. </li>
