--- a/home/index.html
+++ b/home/index.html
@@ -211,7 +211,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p> 
-      Hello, I am a third-year Computer Science Ph.D. student at <a href="https://en.tongji.edu.cn/p/#/">Tongji University</a>, luckily advised by <a href="https://vill-lab.github.io/">Prof. Cairong Zhao</a>. Prior to this, I obtained my bachelor degree in Intelligence Science and Technology from <a href="https://english.njust.edu.cn/">NJUST</a> in 2022. At present, I am doing research intern in OpenMMLab of Shanghai AI Laboratory, Shanghai, supervised by <a href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=en&oi=ao">Dr. Yanan Sun</a>. I also have a deep academic collaboration with <a href="https://scholar.google.com/citations?user=JiTfWVMAAAAJ&hl=zh-CN">Dr. Xinyang Jiang</a> from Microsoft Research Asia. My research interests are in  image/video generation, privacy & security and person Re-ID, etc. 
+      Hello, I am a third-year Computer Science Ph.D. student at <a href="https://en.tongji.edu.cn/p/#/">Tongji University</a>, luckily advised by <a href="https://vill-lab.github.io/">Prof. Cairong Zhao</a>. Prior to this, I obtained my bachelor degree in Intelligence Science and Technology from <a href="https://english.njust.edu.cn/">NJUST</a> in 2022. At present, I am doing research intern in Tencent (AIPD), Shenzhen, supervised by <a href="https://scholar.google.com/citations?hl=zh-CN&user=xUMuDgwAAAAJ">Jun Zhang</a> and Sibo Liu. Before that, I spent a happy journey in OpenMMLab of Shanghai AI Laboratory, Shanghai, supervised by <a href="https://scholar.google.com/citations?user=6TA1oPkAAAAJ&hl=en&oi=ao">Dr. Yanan Sun</a>. I also have a deep academic collaboration with <a href="https://scholar.google.com/citations?user=JiTfWVMAAAAJ&hl=zh-CN">Dr. Xinyang Jiang</a> from Microsoft Research Asia. My research interests are in  image/video generation, privacy & security and person Re-ID, etc. 
     </p>
   </div>
 </div>
@@ -271,6 +271,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <tr>
         <td width="90%">
           <li>
+            <strong>Jun. 2025 -- Present, Tencent</strong>, Shenzhen, China<br>
+            &nbsp&nbsp&nbsp&nbsp <strong>Research Intern</strong>, work on image/video generation.  <br>
+            <!-- &nbsp&nbsp&nbsp&nbsp Supervisor: <a href=""> </a>  -->
+          </li>
+             
+        </td>
+        <td width="10%">
+          <img src="images/icon/tencent.png" width="120%" style="display: block; margin-left: auto; margin-right: auto;">
+        </td>
+      </tr>
+
+    </tbody></table>
+  </div>
+  <div class="bio-body" style="overflow:hidden;">
+    <table>
+
+
+      <tr>
+        <td width="90%">
+          <li>
             <strong>Nov. 2023 -- May. 2025, Shanghai AI Lab</strong>, Shanghai, China<br>
             &nbsp&nbsp&nbsp&nbsp <strong>Research Intern</strong>, work on image/video generation.  <br>
             <!-- &nbsp&nbsp&nbsp&nbsp Supervisor: <a href=""> </a>  -->
@@ -295,7 +315,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
-    <li class="indented" data-date="[May, 2025]"> I will be joining the AI Lab at Tencent (IP-Adapter Team) to begin my internship journey. It's great to see you in Shenzhen!</li>
+    <li class="indented" data-date="[June, 2025]"> Two papers (<strong>MotionShot</strong>, <strong>CrossVLAD</strong>) about motion transfer in video generation and adversarial attack on unified vision-language models are accepted to ICCV 2025.</li>
+    <li class="indented" data-date="[May, 2025]"> I will be joining the AIPD at Tencent (IP-Adapter Team) to begin my internship journey. It's great to see you in Shenzhen!</li>
     <li class="indented" data-date="[May, 2025]"> One paper (<strong>MCDM</strong>) about long-term talkingface generation accepted to ICML 2025.</li>
     <li class="indented" data-date="[Mar, 2025]"> We release <a href="https://tangkexian.github.io/LEGO-Puzzles/"><strong>LEGO-Puzzles</strong></a>, a new benchmark with 1,100 LEGO-based VQA tasks that evaluates MLLMs' ability to perform multi-step spatial reasoning.   </li>
     <li class="indented" data-date="[Feb, 2025]"> One paper (<strong>UniDD</strong>) about dataset distillation accepted to CVPR 2025 as the <strong>oral presentation</strong>. </li>
