--- a/home/index.html
+++ b/home/index.html
@@ -315,6 +315,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
+    <li class="indented" data-date="[Aug, 2025]"> We release <a href="https://github.com/Jeoyal/CharacterShot"><strong>CharacterShot</strong></a>, which supports diverse character designs and custom motion control (2D pose sequence), enabling 4D character animation in minutes and without specialized hardware. </li>
+    <li class="indented" data-date="[Aug, 2025]"> One papers (<strong>CamPVG</strong>) about panorama generation accepted to SIGGRAPH ASIA 2025.</li>
     <li class="indented" data-date="[June, 2025]"> Two papers (<strong>MotionShot</strong>, <strong>CrossVLAD</strong>) about motion transfer in video generation and adversarial attack on unified vision-language models are accepted to ICCV 2025.</li>
     <li class="indented" data-date="[May, 2025]"> I will be joining the AIPD at Tencent (IP-Adapter Team) to begin my internship journey. It's great to see you in Shenzhen!</li>
     <li class="indented" data-date="[May, 2025]"> One paper (<strong>MCDM</strong>) about long-term talkingface generation accepted to ICML 2025.</li>
@@ -538,7 +540,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <i class="fa fa-tasks" aria-hidden="true"></i>
         Academic Services
       </h1>  
-      <b>Conference Reviewer:</b> NeurIPS, ICLR, ICML, ICCV, CVPR, ACM MM, AISTATS<br>
+      <b>Conference Reviewer:</b> NeurIPS, ICLR, ICML, ICCV, CVPR, AAAI, ACM MM, WACV, AISTATS<br>
       <b>Journal Reviewer:</b> IJCV<br>
   </div>
 </div>
